--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -48,7 +48,8 @@
   "dependencies": {
     "@nicepkg/gpt-runner-shared": "workspace:*",
     "ignore": "^5.2.4",
-    "langchain": "^0.0.107",
-    "unconfig": "^0.3.9"
+    "langchain": "^0.0.112",
+    "unconfig": "^0.3.9",
+    "zod": "^3.21.4"
   }
 }
