--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -63,6 +63,7 @@
   ],
   "scripts": {
     "build": "pnpm build:server & pnpm build:client",
+    "build:app-config": "esno ./scripts/build-app-config-json.ts",
     "build:client": "vite build --config ./client/vite.config.ts",
     "build:client:watch": "vite build --config ./client/vite.config.ts --watch",
     "build:server": "unbuild && pnpm tsc --build tsconfig.dts.json",
@@ -73,13 +74,13 @@
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.1.1",
-    "@kvs/node-localstorage": "^2.1.3",
-    "@kvs/storage": "^2.1.3",
+    "@kvs/node-localstorage": "^2.1.5",
+    "@kvs/storage": "^2.1.4",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@monaco-editor/react": "^4.5.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
-    "@tanstack/react-query": "^4.29.25",
+    "@tanstack/react-query": "^4.32.0",
     "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -100,12 +101,13 @@
     "cross-env": "^7.0.3",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
-    "framer-motion": "^10.13.0",
+    "framer-motion": "^10.13.1",
     "fs-extra": "^11.1.1",
     "global-agent": "^3.0.0",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
+    "js-base64": "^3.7.5",
     "keyboardjs": "^2.7.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.40.0",
@@ -121,11 +123,11 @@
     "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^6.0.4",
+    "styled-components": "^6.0.5",
     "undici": "^5.22.1",
     "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.0",
-    "vite": "^4.4.4",
+    "vite": "^4.4.7",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-svgr": "^3.2.0",
     "zustand": "^4.3.9"
