--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -48,8 +48,13 @@
   "dependencies": {
     "@nicepkg/gpt-runner-shared": "workspace:*",
     "ignore": "^5.2.4",
-    "langchain": "^0.0.116",
+    "langchain": "^0.0.118",
     "unconfig": "^0.3.9",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@anthropic-ai/sdk": "^0.5.8",
+    "openai": "^3.3.0"
   }
 }
