--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -80,19 +80,19 @@
     "@monaco-editor/react": "^4.5.1",
     "@nicepkg/gpt-runner-core": "workspace:*",
     "@nicepkg/gpt-runner-shared": "workspace:*",
-    "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query": "^4.32.5",
     "@types/connect-history-api-fallback": "^1.5.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/global-agent": "^2.1.1",
     "@types/keyboardjs": "^2.5.1",
     "@types/lodash-es": "^4.17.8",
-    "@types/react": "^18.2.17",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/uuid": "^9.0.2",
     "@use-gesture/react": "^10.2.27",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.0.4",
     "@vscode/webview-ui-toolkit": "^1.2.2",
     "clsx": "^2.0.0",
     "commander": "^10.0.1",
@@ -104,32 +104,33 @@
     "framer-motion": "^10.15.0",
     "fs-extra": "^11.1.1",
     "global-agent": "^3.0.0",
-    "i18next": "^23.3.0",
+    "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
     "js-base64": "^3.7.5",
     "keyboardjs": "^2.7.0",
     "lodash-es": "^4.17.21",
-    "monaco-editor": "^0.40.0",
+    "monaco-editor": "^0.41.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^13.0.2",
+    "react-i18next": "^13.0.3",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.14.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^6.0.5",
-    "undici": "^5.22.1",
+    "styled-components": "^6.0.7",
+    "undici": "^5.23.0",
     "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.0",
-    "vite": "^4.4.7",
+    "vite": "^4.4.8",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-svgr": "^3.2.0",
-    "zustand": "^4.3.9"
+    "web-streams-polyfill": "^3.2.1",
+    "zustand": "^4.4.0"
   }
 }
