--- a/packages/gpt-runner-core/package.json
+++ b/packages/gpt-runner-core/package.json
@@ -29,8 +29,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
   "main": "dist/index.cjs",
@@ -48,13 +48,13 @@
   "dependencies": {
     "@nicepkg/gpt-runner-shared": "workspace:*",
     "ignore": "^5.2.4",
-    "langchain": "^0.0.123",
+    "langchain": "^0.0.127",
     "unconfig": "^0.3.10",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@anthropic-ai/sdk": "^0.5.10",
+    "@anthropic-ai/sdk": "^0.6.0",
     "openai": "^3.3.0"
   }
 }
