fix(gpt-runner-cli): fix readable stream polyfill not working in nodejs 18+

--- a/packages/gpt-runner-shared/package.json
+++ b/packages/gpt-runner-shared/package.json
@@ -111,8 +111,8 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "undici": "^5.23.0",
-    "web-streams-polyfill": "^3.2.1",
-    "zod": "^3.21.4",
+    "web-streams-polyfill": "^4.0.0-beta.3",
+    "zod": "^3.22.0",
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
