--- a/packages/gpt-runner-web/package.json
+++ b/packages/gpt-runner-web/package.json
@@ -101,7 +101,7 @@
     "cross-env": "^7.0.3",
     "eventemitter": "^0.3.3",
     "express": "^4.18.2",
-    "framer-motion": "^10.15.1",
+    "framer-motion": "^10.15.2",
     "fs-extra": "^11.1.1",
     "global-agent": "^3.0.0",
     "i18next": "^23.4.4",
@@ -130,7 +130,7 @@
     "vite": "^4.4.9",
     "vite-plugin-monaco-editor": "^1.1.0",
     "vite-plugin-svgr": "^3.2.0",
-    "web-streams-polyfill": "^3.2.1",
+    "web-streams-polyfill": "^4.0.0-beta.3",
     "zustand": "^4.4.1"
   }
 }
