fix: lint error

--- a/packages/gpt-runner-cli/package.json
+++ b/packages/gpt-runner-cli/package.json
@@ -49,13 +49,13 @@
     "@nicepkg/gpt-runner-web": "workspace:*"
   },
   "devDependencies": {
+    "@nicepkg/gpt-runner-core": "workspace:*",
+    "@nicepkg/gpt-runner-shared": "workspace:*",
     "cac": "^6.7.14",
     "chokidar": "^3.5.3",
     "colorette": "^2.0.20",
     "consola": "^3.2.3",
     "execa": "5.1.1",
-    "wait-port": "^1.0.4",
-    "@nicepkg/gpt-runner-core": "workspace:*",
-    "@nicepkg/gpt-runner-shared": "workspace:*"
+    "wait-port": "^1.0.4"
   }
 }
