--- a/packages/gpt-runner/package.json
+++ b/packages/gpt-runner/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nicepkg/gpt-runner",
   "version": "1.2.9",
-  "description": "Provides the defineConfig function and UserConfig type to enable type-checked configuration of the gptr.config.ts file, forming a crucial part of the GPT-Runner package designed to enhance AI-driven development workflows.",
+  "description": "Provides the defineConfig function and GlobalAiPersonConfig type to enable type-checked configuration of the gptr.config.ts file, forming a crucial part of the GPT-Runner package designed to enhance AI-driven development workflows.",
   "author": "Jinming Yang <2214962083@qq.com>",
   "license": "MIT",
   "funding": "https://github.com/sponsors/2214962083",
