--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,17 @@ packages/gpt-runner-web/client/public/monaco-editor-vs
 # gpt-runner-intellij
 packages/gpt-runner-intellij/src/main/resources/dist.zip
 packages/gpt-runner-intellij/src/main/resources/gpt-runner-bundler.zip
+
+packages/gpt-runner-intellij/src/main/resources/build
+
+packages/gpt-runner-intellij/src/main/resources/.gradle
+
+
+packages/gpt-runner-intellij/build.gradle.kts-bak
+
+packages/gpt-runner-intellij/build.gradle.kts-bak-2
+
+packages/gpt-runner-intellij/dist.zip
+
+packages/gpt-runner-intellij/plan
+
