--- a/packages/gpt-runner-intellij/src/main/resources/META-INF/plugin.xml
+++ b/packages/gpt-runner-intellij/src/main/resources/META-INF/plugin.xml
@@ -39,4 +39,16 @@
     <action id="cn.nicepkg.gptrunner.intellij.actions.OpenInEditorMode" class="cn.nicepkg.gptrunner.intellij.actions.OpenInEditorMode">
     </action>
   </actions>
+
+  <projectListeners>
+    <listener
+      class="cn.nicepkg.gptrunner.intellij.listeners.FileEditorManagerListenerImpl"
+      topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+  </projectListeners>
+
+  <extensions defaultExtensionNs="com.intellij">
+    <editorFactoryMouseListener
+      implementation="cn.nicepkg.gptrunner.intellij.listeners.EditorMouseListenerImpl"/>
+  </extensions>
+
 </idea-plugin>
