fix intellij version (#28)
* idea plugin baseline
* selection code send ok
* selection code replace ready
* clean when plugin upgrade

* remove same not necessary

--- a/packages/gpt-runner-intellij/src/main/resources/META-INF/plugin.xml
+++ b/packages/gpt-runner-intellij/src/main/resources/META-INF/plugin.xml
@@ -39,4 +39,10 @@
     <action id="cn.nicepkg.gptrunner.intellij.actions.OpenInEditorMode" class="cn.nicepkg.gptrunner.intellij.actions.OpenInEditorMode">
     </action>
   </actions>
+
+  <extensions defaultExtensionNs="com.intellij">
+    <editorFactoryMouseListener
+      implementation="cn.nicepkg.gptrunner.intellij.listeners.EditorMouseListenerImpl"/>
+  </extensions>
+
 </idea-plugin>
