--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,14 +65,22 @@ jobs:
       #     CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
       #     PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
       #     PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
-      #   run: ./gradlew publishPlugin
+      #   run: chmod +x gradlew && ./gradlew publishPlugin
 
-      - name: Publish Plugin
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo SOURCE_NAME=${GITHUB_REF#refs/*/} >> $GITHUB_OUTPUT
+          echo SOURCE_BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_OUTPUT
+          echo SOURCE_TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_OUTPUT
+
+      - name: Build Plugin
         working-directory: ./packages/gpt-runner-intellij
-        run: ./gradlew buildPlugin
+        run: chmod +x gradlew && ./gradlew buildPlugin
 
       # Upload artifact as a release asset
       - name: Upload Release Asset
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ github.event.release.tag_name }} ./build/libs/*
+        working-directory: ./packages/gpt-runner-intellij
+        run: gh release upload ${{ steps.branch_name.outputs.SOURCE_TAG }} ./build/libs/*
