--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,3 +48,38 @@ jobs:
         env:
           VSCE_TOKEN: ${{secrets.VSCE_TOKEN}}
           OVSX_TOKEN: ${{secrets.OVSX_TOKEN}}
+
+      # Setup Java 11 environment for the next steps
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: zulu
+          java-version: 11
+
+      # Publish the plugin to the Marketplace
+      # - name: Publish Plugin
+      #   working-directory: ./packages/gpt-runner-intellij
+      #   env:
+      #     PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+      #     CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
+      #     PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      #     PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
+      #   run: chmod +x gradlew && ./gradlew publishPlugin
+
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo SOURCE_NAME=${GITHUB_REF#refs/*/} >> $GITHUB_OUTPUT
+          echo SOURCE_BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_OUTPUT
+          echo SOURCE_TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_OUTPUT
+
+      - name: Build Plugin
+        working-directory: ./packages/gpt-runner-intellij
+        run: chmod +x gradlew && ./gradlew buildPlugin
+
+      # Upload artifact as a release asset
+      - name: Upload Release Asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        working-directory: ./packages/gpt-runner-intellij
+        run: gh release upload ${{ steps.branch_name.outputs.SOURCE_TAG }} ./build/libs/*
